[workspace]
members = [
    "crates/*",
    "src-tauri",
]
resolver = "2"

[workspace.package]
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
